--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cloud Classifier</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
+  <script src="script.js"></script>
 </head>
 <body>
   <h1>Cloud Classifier</h1>
@@ -11,8 +13,5 @@
   <input type="file" id="imageUpload" accept="image/*">
   <button id="classifyButton">Classify</button>
   <p id="result"></p>
-
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
-  <script src="script.js"></script>
 </body>
 </html>
