--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <script src="script.js"></script>
 </head>
 <body>
-  <h1>Cloud Classifier</h1>
+  <h1>Cloud ClassifierVer.1.2</h1>
   <p>Upload an image of a cloud to classify it.</p>
   <input type="file" id="imageUpload" accept="image/*">
   <button id="classifyButton">Classify</button>
