--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,18 @@
   <title>Cloud ClassifierVer.1.3</title>
   <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
   <script>
-    let model;
+   let model;
 
 window.onload = async () => {
-  // モデルのロード
-  model = await tf.loadLayersModel('/model/model.json');
-  document.getElementById('classifyButton').addEventListener('click', classifyImage);
+  try {
+    // モデルのロード
+    model = await tf.loadLayersModel('/model/model.json');
+    console.log('Model loaded successfully!');
+    document.getElementById('classifyButton').addEventListener('click', classifyImage);
+  } catch (error) {
+    console.error('Error loading model:', error);
+    alert('モデルのロードに失敗しました。URLやファイルが正しいことを確認してください。');
+  }
 };
 
 async function classifyImage() {
@@ -26,12 +32,12 @@ async function classifyImage() {
   reader.onload = async () => {
     const img = new Image();
     img.src = reader.result;
-    img.onload = () => {
+    img.onload = async () => {
       const canvas = document.createElement('canvas');
       const ctx = canvas.getContext('2d');
       canvas.width = img.width;
       canvas.height = img.height;
-      ctx.drawImage(img, 0, 0, img.width, img.height);
+      ctx.drawImage(img, 0, 0);
 
       // グレースケール変換
       const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
@@ -44,31 +50,39 @@ async function classifyImage() {
       }
       ctx.putImageData(imageData, 0, 0);
 
+      // テンソルに変換し、前処理
       const tensor = tf.browser.fromPixels(canvas)
         .resizeBilinear([50, 50])
-        .expandDims()
+        .mean(2) // グレースケール画像に変換
+        .expandDims(0) // バッチ次元を追加
         .toFloat()
         .div(tf.scalar(255.0));
 
       // 予測を実行
-      const predictions = model.predict(tensor).dataSync();
-      console.log(predictions); // デバッグ用
+      try {
+        const predictions = model.predict(tensor).dataSync();
+        console.log(predictions); // デバッグ用
 
-      // クラスラベルの決定
-      const classLabels = ['Ac', 'As', 'Cb', 'Cc', 'Ci', 'Cs', 'Cu', 'Ns', 'Sc', 'St'];
-      const maxIndex = predictions.indexOf(Math.max(...predictions));
-      const label = classLabels[maxIndex];
+        // クラスラベルの決定
+        const classLabels = ['Ac', 'As', 'Cb', 'Cc', 'Ci', 'Cs', 'Cu', 'Ns', 'Sc', 'St'];
+        const maxIndex = predictions.indexOf(Math.max(...predictions));
+        const label = classLabels[maxIndex];
 
-      // 結果を表示
-      document.getElementById('result').innerText = `この雲は: ${label} です。`;
+        // 結果を表示
+        document.getElementById('result').innerText = `この雲は: ${label} です。`;
+      } catch (error) {
+        console.error('Error during prediction:', error);
+        alert('予測中にエラーが発生しました。');
+      }
     };
   };
   reader.readAsDataURL(imageUpload);
 }
+
   </script>
 </head>
 <body>
-  <h1>Cloud ClassifierVer.1.3</h1>
+  <h1>Cloud ClassifierVer.1.4</h1>
   <p>Upload an image of a cloud to classify it.</p>
   <input type="file" id="imageUpload" accept="image/*">
   <button id="classifyButton">Classify</button>
