--- a/public/index.html
+++ b/public/index.html
@@ -1,91 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cloud ClassifierVer.1.3</title>
-  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest"></script>
-  <script>
-   let model;
-
-window.onload = async () => {
-  try {
-    // モデルのロード
-    model = await tf.loadLayersModel('/model/model.json');
-    console.log('Model loaded successfully!');
-    document.getElementById('classifyButton').addEventListener('click', classifyImage);
-  } catch (error) {
-    console.error('Error loading model:', error);
-    alert('モデルのロードに失敗しました。URLやファイルが正しいことを確認してください。');
-  }
-};
-
-async function classifyImage() {
-  const imageUpload = document.getElementById('imageUpload').files[0];
-  if (!imageUpload) {
-    alert('画像をアップロードしてください。');
-    return;
-  }
-
-  // 画像を読み込み、グレースケールに変換してテンソルに変換
-  const reader = new FileReader();
-  reader.onload = async () => {
-    const img = new Image();
-    img.src = reader.result;
-    img.onload = async () => {
-      const canvas = document.createElement('canvas');
-      const ctx = canvas.getContext('2d');
-      canvas.width = img.width;
-      canvas.height = img.height;
-      ctx.drawImage(img, 0, 0);
-
-      // グレースケール変換
-      const imageData = ctx.getImageData(0, 0, canvas.width, canvas.height);
-      const data = imageData.data;
-      for (let i = 0; i < data.length; i += 4) {
-        const avg = (data[i] + data[i + 1] + data[i + 2]) / 3;
-        data[i] = avg;     // Red
-        data[i + 1] = avg; // Green
-        data[i + 2] = avg; // Blue
-      }
-      ctx.putImageData(imageData, 0, 0);
-
-      // テンソルに変換し、前処理
-      const tensor = tf.browser.fromPixels(canvas)
-        .resizeBilinear([50, 50])
-        .mean(2) // グレースケール画像に変換
-        .expandDims(0) // バッチ次元を追加
-        .toFloat()
-        .div(tf.scalar(255.0));
-
-      // 予測を実行
-      try {
-        const predictions = model.predict(tensor).dataSync();
-        console.log(predictions); // デバッグ用
-
-        // クラスラベルの決定
-        const classLabels = ['Ac', 'As', 'Cb', 'Cc', 'Ci', 'Cs', 'Cu', 'Ns', 'Sc', 'St'];
-        const maxIndex = predictions.indexOf(Math.max(...predictions));
-        const label = classLabels[maxIndex];
-
-        // 結果を表示
-        document.getElementById('result').innerText = `この雲は: ${label} です。`;
-      } catch (error) {
-        console.error('Error during prediction:', error);
-        alert('予測中にエラーが発生しました。');
-      }
-    };
-  };
-  reader.readAsDataURL(imageUpload);
-}
-
-  </script>
+  <title>Cloud Classification</title>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
 </head>
 <body>
-  <h1>Cloud ClassifierVer.1.4</h1>
-  <p>Upload an image of a cloud to classify it.</p>
-  <input type="file" id="imageUpload" accept="image/*">
-  <button id="classifyButton">Classify</button>
-  <p id="result"></p>
+  <input type="file" id="upload" accept="image/*">
+  <canvas id="canvas"></canvas>
+  <p id="result"></p> <!-- 結果表示用の要素 -->
+  <script src="script.js"></script>
 </body>
 </html>
