--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
   <input type="file" id="upload" accept="image/*">
   <canvas id="canvas"></canvas>
   <p id="result"></p> <!-- 結果表示用の要素 -->
-  <script src="script.js"></script>
+  <script src="script.js"></script> <!-- script.jsはmodelフォルダーの外に置く -->
 </body>
 </html>
